#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-10-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999936 released.

        * Added Caching of Output with CHI.


2012-10-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999935 released.

        * Dynamically find sftp in setuid mode.

        * Fixed bug in mirror().

        * Other minor bugs.


2012-10-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999934 released.

        * Fixed a couple of bugs.


2012-10-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999933 released.

        * Lots of MozRepl enhancements.


2012-10-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999932 released.

        * Fixed endless loop in login process.


2012-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999931 released.

        * Implemented delayed lookup for bin utilities until
          actually called for - improves overall startup time.

        * Replaced all make_path calls with setuid_cmd to mkdir.


2012-10-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999930 released.

        * Fixed Data::Dump::Streamer install so it doesn't
          stop to ask user for a shortcut in Makefile.PL.

        * Fixed passwd file fixing code in Makefile.PL.


2012-10-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999929 released.

        * Added robust code to check sshd status during install.

        * Added wait of 15 seconds before displaying semaphore
          lock warning on FullAuto startup.

