@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 3984ab68facb0e1b07181d696638496a5448589e ChangeLog
+SHA1 d937049b65b79fa6c9c8fceac20e1a6c6bae02a1 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1606162df6f0afeb3b097cafa60a585ed24266df MANIFEST
-SHA1 2b1e515dd3dc719e8735a244f83665cc96ceaf45 META.yml
-SHA1 4a2ab195f4c5e72a7a5ff0036240b4dfdebb08cd MYMETA.json
-SHA1 d4a4370cfc8a7d5b1dba047f6290f65c5b9ec77c MYMETA.yml
-SHA1 47fefb2d9b811f51f700c9de74bc8fa6534a6d67 Makefile.PL
+SHA1 142409ec334b1cf830aa04b49d215aad36333952 META.yml
+SHA1 b0fd25c57014c652a3cb0e3f50b4572fd11868d8 MYMETA.json
+SHA1 bf5c0129ccbf84bcff1cbf6356a9fdf0abe9e8f6 MYMETA.yml
+SHA1 9ac818ca157886204e6b8ef6aa878b55147fd705 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -38,7 +38,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 10c3aca22e8e8d0eba2eae263a231357516aba6f lib/Net/FullAuto.pm
+SHA1 8fe401a5c235473aeba05e484533a1b2359e6117 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -49,13 +49,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 899967c29f571f64aa28edf8692cce5da8024d0a lib/Net/FullAuto/FA_Core.pm
+SHA1 b4df6a5aebfd3f10a5e5b7c76464325e709285ba lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlCQlh0ACgkQJM3IZYB6aOoj7gCfcbgH8r5Iki+W6FOcKJwUmlev
-2G0AoIjrsAcC+GKehYYVVr/tLP+xABwV
-=+laO
+iEYEARECAAYFAlCX3hEACgkQJM3IZYB6aOoX4QCaAhyXW8V8SkYizA5hKsUIeC7d
+QOUAnAqUS6Ihzzsm89o3dbKMu+Ev4JLD
+=aUaq
 -----END PGP SIGNATURE-----
