@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999936';
+our $VERSION='0.999937';
 
 
 use 5.005;
